Get Involve - section

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Order safe meal | SafeMeal.com</title>
     <link rel="stylesheet" href="#">
-    <link href="style.css" rel="stylesheet"> 
+    <link href="style.css" rel="stylesheet">
+    
 </head>
 
 <body>
@@ -17,8 +18,8 @@
             <img src="#" alt="Unicgarden.com" width="80px" height="80px">
         </div>
         <ul>
-            <li class="item"><a href="#">Home</a></li>
-            <li class="item"><a href="#">our Services</a></li>
+            <li class="item"><a href="index.html">Home</a></li>
+            <li class="item"><a href="activities.html">Get involve</a></li>
             <li class="item"><a href="#">Partners</a></li>
             <li class="item"><a href="#">Contact Us</a></li>
         </ul>
